--- a/records/index.html
+++ b/records/index.html
@@ -662,6 +662,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Kikagaku Moyo</td>
+	<td><a href="https://www.discogs.com/Kikagaku-Moyo-Masana-Temples/release/13152144">Masana Temples</a></td>
+	<td>12 Inch</td>
+	<td>Blue</td>
+	<td>LP</td>
+	<td>Limited to 1000</td>
+</tr>
+<tr align=center>
 	<td>The Killers</td>
 	<td>Hot Fuss</td>
 	<td>12 Inch</td>
@@ -1704,9 +1712,9 @@
 </table>
 <br>
 <div id="text">
-Total: 210
+Total: 211
 <br>
-Last Updated: 2019-07-21
+Last Updated: 2019-09-01
 </div>
 <br>
 </div>
