update record list

--- a/records/index.html
+++ b/records/index.html
@@ -447,6 +447,14 @@
 </tr>
 <tr align=center>
 	<td>Explosions in the Sky</td>
+	<td><a href="https://www.discogs.com/Explosions-In-The-Sky-The-Rescue-/release/13992920">The Rescue</a></td>
+	<td>12 Inch</td>
+	<td>Orange</td>
+	<td>LP</td>
+	<td>Limited to 4000</td>
+</tr>
+<tr align=center>
+	<td>Explosions in the Sky</td>
 	<td>Take Care, Take Care, Take Care</td>
 	<td>12 Inch</td>
 	<td>Black</td>
@@ -467,7 +475,7 @@
 	<td>12 Inch</td>
 	<td>Clear with Black Marble</td>
 	<td>LP</td>
-	<td>Limited to 550 copies</td>
+	<td>Limited to 550</td>
 </tr>
 <tr align=center>
 	<td>Ghost</td>
@@ -710,8 +718,16 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Lee Ranaldo</td>
+	<td><a href="https://www.discogs.com/Lee-Ranaldo-Between-The-Times-And-The-Tides/release/3476716">Between the Times and the Tides</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Lee Ranaldo and the Dust</td>
-	<td>Last Night on Earth</td>
+	<td><a href="https://www.discogs.com/Lee-Ranaldo-And-The-Dust-Last-Night-On-Earth/release/4965373">Last Night on Earth</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Double LP</td>
@@ -827,6 +843,14 @@
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Mogwai</td>
+	<td><a href="https://www.discogs.com/Mogwai-Mr-Beast/release/12553116">Mr Beast</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
 	<td>-</td>
 </tr>
 <tr align=center>
@@ -1712,9 +1736,9 @@
 </table>
 <br>
 <div id="text">
-Total: 211
+Total: 214
 <br>
-Last Updated: 2019-09-01
+Last Updated: 2019-09-07
 </div>
 <br>
 </div>
