Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -630,6 +630,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>The Jimi Hendrix Experience</td>
+	<td><a href="https://www.discogs.com/The-Jimi-Hendrix-Experience-Electric-Ladyland/release/10991645">Electric Ladyland</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>The Jimmy Chamberlin Complex</td>
 	<td>The Parable</td>
 	<td>12 Inch</td>
@@ -1736,9 +1744,9 @@
 </table>
 <br>
 <div id="text">
-Total: 214
+Total: 215
 <br>
-Last Updated: 2019-09-07
+Last Updated: 2019-09-08
 </div>
 <br>
 </div>
