Record list update

--- a/records/index.html
+++ b/records/index.html
@@ -415,6 +415,14 @@
 </tr>
 <tr align=center>
 	<td>Esmerine</td>
+	<td><a href="https://www.discogs.com/Esmerine-Aurora/release/970827">Aurora</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Esmerine</td>
 	<td>La Lechuza</td>
 	<td>12 Inch</td>
 	<td>Black</td>
@@ -1752,9 +1760,9 @@
 </table>
 <br>
 <div id="text">
-Total: 216
+Total: 217
 <br>
-Last Updated: 2019-09-22
+Last Updated: 2019-09-28
 </div>
 <br>
 </div>
