Record and concert list updates

--- a/records/index.html
+++ b/records/index.html
@@ -695,6 +695,14 @@
 </tr>
 <tr align=center>
 	<td>Kikagaku Moyo</td>
+	<td>House in the Tall Grass</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Kikagaku Moyo</td>
 	<td><a href="https://www.discogs.com/Kikagaku-Moyo-Masana-Temples/release/13152144">Masana Temples</a></td>
 	<td>12 Inch</td>
 	<td>Blue</td>
@@ -791,6 +799,14 @@
 </tr>
 <tr align=center>
 	<td>Max Richter</td>
+	<td>Infra</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>Autographed by Max Richter</td>
+</tr>
+<tr align=center>
+	<td>Max Richter</td>
 	<td>From Sleep</td>
 	<td>12 Inch</td>
 	<td>Clear</td>
@@ -827,6 +843,14 @@
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Minami Deutsch</td>
+	<td>With Dim Light</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
 	<td>-</td>
 </tr>
 <tr align=center>
@@ -1760,9 +1784,9 @@
 </table>
 <br>
 <div id="text">
-Total: 217
+Total: 220
 <br>
-Last Updated: 2019-09-28
+Last Updated: 2019-11-01
 </div>
 <br>
 </div>
