--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1723,6 +1723,22 @@
 	<td>No</td>
 	<td>Sara</td>
 </tr>
+<tr align=center>
+	<td>Max Richter</td>
+	<td>-</td>
+	<td>2019-10-13</td>
+	<td>Bing Concert Hall; Stanford, CA, US</td>
+	<td>No</td>
+	<td>Sara</td>
+</tr>
+<tr align=center>
+	<td>Kikagaku Moyo</td>
+	<td>Minami Deutsch</td>
+	<td>2019-10-30</td>
+	<td>The Fillmore; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>Sara</td>
+</tr>
 </table>
 <br>
 </div>
