Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -695,6 +695,14 @@
 </tr>
 <tr align=center>
 	<td>Kikagaku Moyo</td>
+	<td>Forest of Lost Children</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Kikagaku Moyo</td>
 	<td>House in the Tall Grass</td>
 	<td>12 Inch</td>
 	<td>Black</td>
@@ -740,6 +748,14 @@
 	<td>Marble Amber</td>
 	<td>LP</td>
 	<td>Limited to 100</td>
+</tr>
+<tr align=center>
+	<td>Kurt Vile</td>
+	<td><a href="https://www.discogs.com/Kurt-Vile-Bottle-It-In/release/12625783">Bottle It In</a></td>
+	<td>12 Inch</td>
+	<td>Blue</td>
+	<td>Double LP</td>
+	<td>-</td>
 </tr>
 <tr align=center>
 	<td>L'Assassins</td>
@@ -995,6 +1011,14 @@
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Pavement</td>
+	<td>Crooked Rain Crooked Rain</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
 	<td>-</td>
 </tr>
 <tr align=center>
@@ -1784,9 +1808,9 @@
 </table>
 <br>
 <div id="text">
-Total: 220
+Total: 223
 <br>
-Last Updated: 2019-11-01
+Last Updated: 2019-12-23
 </div>
 <br>
 </div>
