Record list update

--- a/records/index.html
+++ b/records/index.html
@@ -1654,6 +1654,14 @@
 	<td>Second pressing</td>
 </tr>
 <tr align=center>
+	<td>Talk Talk</td>
+    <td>Spirit of Eden</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Tortoise</td>
 	<td>Millions Now Living Will Never Die</td>
 	<td>12 Inch</td>
@@ -1808,9 +1816,9 @@
 </table>
 <br>
 <div id="text">
-Total: 223
+Total: 224
 <br>
-Last Updated: 2019-12-23
+Last Updated: 2020-01-11
 </div>
 <br>
 </div>
