Record list updates

--- a/records/index.html
+++ b/records/index.html
@@ -446,6 +446,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Esmerine</td>
+	<td>Mechanics of Dominion</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Explosions in the Sky</td>
 	<td>Those Who Tell the Truth Shall Die, Those Who Tell the Truth Shall Live Forever</td>
 	<td>12 Inch</td>
@@ -1816,9 +1824,9 @@
 </table>
 <br>
 <div id="text">
-Total: 224
+Total: 225
 <br>
-Last Updated: 2020-01-11
+Last Updated: 2020-04-11
 </div>
 <br>
 </div>
