Record list updates

--- a/records/index.html
+++ b/records/index.html
@@ -1815,7 +1815,7 @@
 </tr>
 <tr align=center>
 	<td>Zwan</td>
-	<td>Mary Star of the Sea</td>
+	<td><a href="https://www.discogs.com/Zwan-Mary-Star-Of-The-Sea/release/892155">Mary Star of the Sea</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Double LP</td>
