Record list updates

--- a/records/index.html
+++ b/records/index.html
@@ -1383,7 +1383,7 @@
 </tr>
 <tr align=center>
 	<td>Thee Silver Mt. Zion Memorial Orchestra</td>
-	<td>"The West Will Rise Again" E.P.</td>
+	<td><a href="https://www.discogs.com/Thee-Silver-Mt-Zion-Memorial-Orchestra-The-West-Will-Rise-Again/release/3372770">"The West Will Rise Again" E.P.</a></td>
 	<td>7 Inch</td>
 	<td>Black</td>
 	<td>Double 7"</td>
@@ -1399,7 +1399,7 @@
 </tr>
 <tr align=center>
 	<td>Thee Silver Mt. Zion Memorial Orchestra</td>
-	<td>Hang on to Each Other</td>
+	<td><a href="https://www.discogs.com/Thee-Silver-Mount-Zion-Memorial-Orchestra-Feat-Ariel-Engle-Hang-On-To-Each-Other/release/5579611">Hang on to Each Other</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>EP</td>
@@ -1447,7 +1447,7 @@
 </tr>
 <tr align=center>
 	<td>Smashing Pumpkins</td>
-	<td>Peel Sessions</td>
+	<td><a href="https://www.discogs.com/Smashing-Pumpkins-Peel-Sessions/release/640267">Peel Sessions</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Single</td>
@@ -1487,7 +1487,7 @@
 </tr>
 <tr align=center>
 	<td>Smashing Pumpkins</td>
-	<td>Pisces Iscariot</td>
+	<td><a href="https://www.discogs.com/Smashing-Pumpkins-Pisces-Iscariot/release/2128621">Pisces Iscariot</a></td>
 	<td>12 Inch</td>
 	<td>Translucent Amber</td>
 	<td>LP with bonus 7 Inch</td>
@@ -1503,7 +1503,7 @@
 </tr>
 <tr align=center>
 	<td>The Smashing Pumpkins</td>
-	<td>Mellon Collie and the Infinite Sadness</td>
+	<td><a href="https://www.discogs.com/The-Smashing-Pumpkins-Mellon-Collie-And-The-Infinite-Sadness/release/788491">Mellon Collie and the Infinite Sadness</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Triple LP</td>
@@ -1551,7 +1551,7 @@
 </tr>
 <tr align=center>
 	<td>The Smashing Pumpkins</td>
-	<td>The Aeroplane Flies High</td>
+	<td><a href="https://www.discogs.com/The-Smashing-Pumpkins-The-Aeroplane-Flies-High/release/4760393">The Aeroplane Flies High</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>5 LP Box Set</td>
@@ -1623,7 +1623,7 @@
 </tr>
 <tr align=center>
 	<td>Starchildren/Catherine</td>
-	<td>Delusions of Candor/Songs About Girls</td>
+	<td><a href="https://www.discogs.com/Starchildren-Catherine-Delusions-Of-Candor-Flight-Of-The-Eagle-Chante-Des-Chansons-Sur-Les-Filles-So/release/1407300">Delusions of Candor/Songs About Girls</a></td>
 	<td>Split 7 Inch</td>
 	<td>Black</td>
 	<td>Single</td>
