Record list updates

--- a/records/index.html
+++ b/records/index.html
@@ -158,6 +158,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Bob Dylan</td>
+	<td>Desire</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Bonobo</td>
 	<td>Black Sands</td>
 	<td>12 Inch</td>
@@ -1678,6 +1686,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Unconditional Arms</td>
+	<td><a href="https://www.discogs.com/Unconditional-Arms-Formation/release/15158430">Formation</a></td>
+	<td>12 Inch</td>
+	<td>Red/Blue Marble</td>
+	<td>LP</td>
+	<td>Limited to 250</td>
+</tr>
+<tr align=center>
 	<td>Underworld</td>
 	<td>Two Months Off</td>
 	<td>12 Inch</td>
@@ -1824,9 +1840,9 @@
 </table>
 <br>
 <div id="text">
-Total: 225
+Total: 227
 <br>
-Last Updated: 2020-04-11
+Last Updated: 2020-05-02
 </div>
 <br>
 </div>
