Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -30,6 +30,15 @@
 	<td>Limited to 900</td>
 </tr>
 <tr align=center>
+	<td>Alice Coltrane</td>
+	<td>Journey in Satchidananda</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+
+<tr align=center>
 	<td>All Tiny Creatures</td>
 	<td>Segni EP</td>
 	<td>12 Inch</td>
@@ -1086,6 +1095,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Portico Quartet</td>
+	<td><a href="https://www.discogs.com/Portico-Quartet-Memory-Streams/release/14227174">Memory Streams</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Primal Scream</td>
 	<td>Screamadelica</td>
 	<td>12 Inch</td>
@@ -1840,9 +1857,9 @@
 </table>
 <br>
 <div id="text">
-Total: 227
+Total: 229
 <br>
-Last Updated: 2020-05-02
+Last Updated: 2020-07-04
 </div>
 <br>
 </div>
