Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -367,6 +367,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Dirty Three</td>
+	<td><a href="https://www.discogs.com/Dirty-Three-Cinder/release/1153978">Cinder</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>DJ Jazzy Jeff & The Fresh Prince</td>
 	<td>He's the DJ, I'm the Rapper</td>
 	<td>12 Inch</td>
@@ -1857,9 +1865,9 @@
 </table>
 <br>
 <div id="text">
-Total: 229
+Total: 230
 <br>
-Last Updated: 2020-07-04
+Last Updated: 2020-07-19
 </div>
 <br>
 </div>
