Added linkes to records page

--- a/records/index.html
+++ b/records/index.html
@@ -304,7 +304,7 @@
 </tr>
 <tr align=center>
 	<td>D. Lissvik</td>
-	<td>7 Trx + Intermission</td>
+	<td><a href="https://www.discogs.com/D-Lissvik-7-Trx-Intermission/release/1616652">7 Trx + Intermission</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -320,7 +320,7 @@
 </tr>
 <tr align=center>
 	<td>Dan Lissvik</td>
-	<td>Shuvit!</td>
+	<td><a href="https://www.discogs.com/Dan-Lissvik-Shuvit/release/6563343">Shuvit!</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Single</td>
@@ -328,7 +328,7 @@
 </tr>
 <tr align=center>
 	<td>Dan Lissvik</td>
-	<td>Midnight</td>
+	<td><a href="https://www.discogs.com/Dan-Lissvik-Midnight/release/8708866">Midnight</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -656,7 +656,7 @@
 </tr>
 <tr align=center>
 	<td>James Iha</td>
-	<td>Be Strong Now</td>
+	<td><a href="https://www.discogs.com/James-Iha-Be-Strong-Now/release/2900351">Be Strong Now</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Single</td>
@@ -704,7 +704,7 @@
 </tr>
 <tr align=center>
 	<td>Kaki King</td>
-	<td>Everybody Loves You</td>
+	<td><a href="https://www.discogs.com/Kaki-King-Everybody-Loves-You/release/3134321">Everybody Loves You</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -712,7 +712,7 @@
 </tr>
 <tr align=center>
 	<td>Kaki King</td>
-	<td>Pull Me Out Alive</td>
+	<td><a href="https://www.discogs.com/Kaki-King-Pull-Me-Out-Alive/release/1746158">Pull Me Out Alive</a></td>
 	<td>7 Inch</td>
 	<td>Black</td>
 	<td>Single</td>
@@ -720,7 +720,7 @@
 </tr>
 <tr align=center>
 	<td>Kaki King</td>
-	<td>Glow</td>
+	<td><a href="https://www.discogs.com/Kaki-King-Glow/release/4169238">Glow</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -760,7 +760,7 @@
 </tr>
 <tr align=center>
 	<td>Kinski/Acid Mothers Temple</td>
-	<td>Kinski/Acid Mothers Temple</td>
+	<td><a href="https://www.discogs.com/Kinski-Acid-Mothers-Temple-Kinski-Acid-Mothers-Temple/release/430907">Kinski/Acid Mothers Temple</a></td>
 	<td>Split 12 Inch</td>
 	<td>Black and White</td>
 	<td>Double EP</td>
@@ -968,7 +968,7 @@
 </tr>
 <tr align=center>
 	<td>The Mountain Goats and Kaki King</td>
-	<td>Black Pear Tree</td>
+	<td><a href="https://www.discogs.com/The-Mountain-Goats-Kaki-King-Black-Pear-Tree/release/4880289">Black Pear Tree</a></td>
 	<td>12 Inch</td>
 	<td>Black with Yellow Marble</td>
 	<td>EP</td>
@@ -1208,7 +1208,7 @@
 </tr>
 <tr align=center>
 	<td>Russian Circles/These Arms Are Snakes</td>
-	<td>Philios/Camera Shy/Trix</td>
+	<td><a href="https://www.discogs.com/These-Arms-Are-Snakes-Russian-Circles-These-Arms-Are-Snakes-Russian-Circles/release/1546603">Philios/Camera Shy/Trix</a></td>
 	<td>Split 12 Inch</td>
 	<td>Black</td>
 	<td>Single</td>
