Links open in new window on record list now

--- a/records/index.html
+++ b/records/index.html
@@ -2,11 +2,12 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../css1.css">
 <title>Records</title>
+<base target="_blank">
 </head>
 <body>
     
 <div style="position: absolute; top: 10px; left: 20px; font-family: sans-serif; font-weight: 300; font-size: 1.5em;">
-    <a href="http://mattkrueger.org">Home</a>
+    <a href="http://mattkrueger.org" target="_self">Home</a>
 </div>
     
 <div id="main">
