Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -336,6 +336,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Dan Lissvik</td>
+	<td><a href="https://www.discogs.com/Dan-Lissvik-Archive-1Ish/release/15833567">Archive 1'Ish</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>4 LP Box Set</td>
+	<td>Limited to 200</td>
+</tr>
+<tr align=center>
 	<td>Death Blues</td>
 	<td>Non-Fiction</td>
 	<td>12 Inch</td>
@@ -1866,9 +1874,9 @@
 </table>
 <br>
 <div id="text">
-Total: 230
+Total: 231
 <br>
-Last Updated: 2020-07-19
+Last Updated: 2020-09-11
 </div>
 <br>
 </div>
