--- a/records/index.html
+++ b/records/index.html
@@ -793,6 +793,22 @@
 </tr>
 <tr align=center>
 	<td>Kurt Vile</td>
+	<td>Wakin On A Pretty Daze</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Kurt Vile</td>
+	<td>B'lieve I'm Goin Down...</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Kurt Vile</td>
 	<td><a href="https://www.discogs.com/Kurt-Vile-Bottle-It-In/release/12625783">Bottle It In</a></td>
 	<td>12 Inch</td>
 	<td>Blue</td>
@@ -1874,9 +1890,9 @@
 </table>
 <br>
 <div id="text">
-Total: 231
+Total: 233
 <br>
-Last Updated: 2020-09-11
+Last Updated: 2020-09-28
 </div>
 <br>
 </div>
