--- a/records/index.html
+++ b/records/index.html
@@ -793,7 +793,7 @@
 </tr>
 <tr align=center>
 	<td>Kurt Vile</td>
-	<td>Wakin On A Pretty Daze</td>
+	<td>Wakin on a Pretty Daze</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Double LP</td>
