Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -808,6 +808,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Kurt Vile and Courtney Barnett</td>
+	<td>Lotta Sea Lice	.</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Kurt Vile</td>
 	<td><a href="https://www.discogs.com/Kurt-Vile-Bottle-It-In/release/12625783">Bottle It In</a></td>
 	<td>12 Inch</td>
@@ -1890,9 +1898,9 @@
 </table>
 <br>
 <div id="text">
-Total: 233
+Total: 234
 <br>
-Last Updated: 2020-09-28
+Last Updated: 2020-10-11
 </div>
 <br>
 </div>
