Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -792,6 +792,14 @@
 	<td>Limited to 100</td>
 </tr>
 <tr align=center>
+	<td>Kuniko Plays Reich	</td>
+	<td><a href="https://www.discogs.com/Kuniko-Plays-Reich-Counterpoint/release/6695299">Counterpoint</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Kurt Vile</td>
 	<td>Wakin on a Pretty Daze</td>
 	<td>12 Inch</td>
@@ -1034,6 +1042,14 @@
 <tr align=center>
 	<td>Neil Young & Crazy Horse</td>
 	<td>Everybody Knows This Is Nowhere</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Neil Young</td>
+	<td>After the Gold Rush</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -1898,9 +1914,9 @@
 </table>
 <br>
 <div id="text">
-Total: 234
+Total: 236
 <br>
-Last Updated: 2020-10-11
+Last Updated: 2020-10-31
 </div>
 <br>
 </div>
