Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -1736,6 +1736,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>The Stills</td>
+	<td><a href="https://www.discogs.com/The-Stills-Without-Feathers/release/1525859">Without Feathers</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Studio</td>
     <td><a href="https://www.discogs.com/Studio-West-Coast-Second-Edition-2-LP/release/1024384">West Coast</a></td>
 	<td>12 Inch</td>
@@ -1914,7 +1922,7 @@
 </table>
 <br>
 <div id="text">
-Total: 236
+Total: 237
 <br>
 Last Updated: 2020-10-31
 </div>
