Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -840,6 +840,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Led Zeppelin</td>
+	<td>Led Zeppelin IV</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Lee Ranaldo</td>
 	<td><a href="https://www.discogs.com/Lee-Ranaldo-Between-The-Times-And-The-Tides/release/3476716">Between the Times and the Tides</a></td>
 	<td>12 Inch</td>
@@ -1922,9 +1930,9 @@
 </table>
 <br>
 <div id="text">
-Total: 237
+Total: 238
 <br>
-Last Updated: 2020-10-31
+Last Updated: 2020-11-01
 </div>
 <br>
 </div>
