Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -161,7 +161,7 @@
 </tr>
 <tr align=center>
 	<td>Ben Harper and the Blind Boys of Alabama</td>
-	<td>Ther Will Be a Light</td>
+	<td>There Will Be a Light</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -602,6 +602,14 @@
 <tr align=center>
 	<td>Godspeed You! Black Emperor</td>
 	<td>"Luciferian Towers"</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>The Gun Club</td>
+	<td>The Las Vegas Story</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -1257,7 +1265,7 @@
 </tr>
 <tr align=center>
 	<td>Russian Circles</td>
-	<td>Upper Ninety</td>
+	<td><a href="https://www.discogs.com/Russian-Circles-Upper-Ninety/release/801171">Upper Ninety</a></td>
 	<td>7 Inch</td>
 	<td>Pink</td>
 	<td>Single</td>
@@ -1930,9 +1938,9 @@
 </table>
 <br>
 <div id="text">
-Total: 238
+Total: 239
 <br>
-Last Updated: 2020-11-01
+Last Updated: 2020-12-08
 </div>
 <br>
 </div>
