Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -609,6 +609,14 @@
 </tr>
 <tr align=center>
 	<td>The Gun Club</td>
+	<td><a href="https://www.discogs.com/The-Gun-Club-Miami/release/16305822">Miami</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>The Gun Club</td>
 	<td>The Las Vegas Story</td>
 	<td>12 Inch</td>
 	<td>Black</td>
@@ -1938,9 +1946,9 @@
 </table>
 <br>
 <div id="text">
-Total: 239
+Total: 240
 <br>
-Last Updated: 2020-12-08
+Last Updated: 2020-12-17
 </div>
 <br>
 </div>
