Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -152,6 +152,14 @@
 	<td>Limited to 300</td>
 </tr>
 <tr align=center>
+	<td>The Beatles</td>
+	<td>Sgt. Pepper's Lonely Hearts Club Band</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td></td>
+</tr>
+<tr align=center>
 	<td>Bell Orchestre</td>
 	<td>As Seen Through Windows</td>
 	<td>12 Inch</td>
@@ -1946,9 +1954,9 @@
 </table>
 <br>
 <div id="text">
-Total: 240
+Total: 241
 <br>
-Last Updated: 2020-12-17
+Last Updated: 2020-12-25
 </div>
 <br>
 </div>
