Updated record list and copyright

--- a/records/index.html
+++ b/records/index.html
@@ -153,7 +153,31 @@
 </tr>
 <tr align=center>
 	<td>The Beatles</td>
+	<td>Rubber Soul</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td></td>
+</tr>
+<tr align=center>
+	<td>The Beatles</td>
 	<td>Sgt. Pepper's Lonely Hearts Club Band</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td></td>
+</tr>
+<tr align=center>
+	<td>The Beatles</td>
+	<td>Magical Mystery Tour</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td></td>
+</tr>
+<tr align=center>
+	<td>The Beatles</td>
+	<td>Abbey Road</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -1954,9 +1978,9 @@
 </table>
 <br>
 <div id="text">
-Total: 241
+Total: 244
 <br>
-Last Updated: 2020-12-25
+Last Updated: 2021-01-23
 </div>
 <br>
 </div>
