Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -1456,6 +1456,14 @@
     <td>-</td>
 </tr>
 <tr align=center>
+    <td>Ryley Walker & Kikagaku Moyo</td>
+    <td>Deep Fried Grandeur</td>
+    <td>12 Inch</td>
+    <td>Black</td>
+    <td>LP</td>
+    <td>-</td>
+</tr>
+<tr align=center>
 	<td>Saltland</td>
 	<td>I Thought It Was Us But It Was All of Us</td>
 	<td>12 Inch</td>
@@ -1978,9 +1986,9 @@
 </table>
 <br>
 <div id="text">
-Total: 244
+Total: 245
 <br>
-Last Updated: 2021-01-23
+Last Updated: 2021-02-18
 </div>
 <br>
 </div>
