Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -1577,7 +1577,7 @@
 </tr>
 <tr align=center>
 	<td>Smashing Pumpkins</td>
-	<td>Tristessa</td>
+	<td><a href="https://www.discogs.com/Smashing-Pumpkins-Tristessa/release/538067">Tristessa</a></td>
 	<td>7 Inch</td>
 	<td>Pink</td>
 	<td>Single</td>
@@ -1601,7 +1601,7 @@
 </tr>
 <tr align=center>
 	<td>Smashing Pumpkins</td>
-	<td>I Am One</td>
+	<td><a href="https://www.discogs.com/Smashing-Pumpkins-I-Am-One/release/640265">I Am One</a></td>
 	<td>10 Inch</td>
 	<td>Black</td>
 	<td>Single</td>
@@ -1641,7 +1641,7 @@
 </tr>
 <tr align=center>
 	<td>The Smashing Pumpkins</td>
-	<td>1979 Mixes</td>
+	<td><a href="https://www.discogs.com/The-Smashing-Pumpkins-1979-Mixes/release/106442">1979 Mixes</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Single</td>
@@ -1657,15 +1657,15 @@
 </tr>
 <tr align=center>
 	<td>The Smashing Pumpkins</td>
-	<td>1979/Bullet with Butterfly Wings</td>
+	<td><a href="https://www.discogs.com/The-Smashing-Pumpkins-1979-Bullet-With-Butterfly-Wings/release/989123">1979/Bullet with Butterfly Wings</a></td>
 	<td>7 Inch</td>
 	<td>Black</td>
 	<td>Single</td>
-	<td>-</td>
+	<td>Limited to 10,000</td>
 </tr>
 <tr align=center>
 	<td>The Smashing Pumpkins</td>
-	<td>Adore</td>
+	<td><a href="https://www.discogs.com/The-Smashing-Pumpkins-Adore/release/445653">Adore</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Double LP</td>
@@ -1673,7 +1673,7 @@
 </tr>
 <tr align=center>
 	<td>The Smashing Pumpkins</td>
-	<td>Machina/the Machines of God</td>
+	<td><a href="https://www.discogs.com/The-Smashing-Pumpkins-Machina-The-Machines-Of-God/release/2194679">Machina/the Machines of God</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Double LP</td>
