Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -185,7 +185,15 @@
 </tr>
 <tr align=center>
 	<td>Bell Orchestre</td>
-	<td>As Seen Through Windows</td>
+	<td><a href="https://www.discogs.com/Bell-Orchestre-Recording-A-Tape-The-Colour-Of-The-Light/release/1776229">Recording a Tape the Colour of the Light</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Bell Orchestre</td>
+	<td><a href="https://www.discogs.com/Bell-Orchestre-As-Seen-Through-Windows/release/2863388">As Seen Through Windows</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Double LP</td>
@@ -1986,9 +1994,9 @@
 </table>
 <br>
 <div id="text">
-Total: 245
+Total: 246
 <br>
-Last Updated: 2021-02-18
+Last Updated: 2021-03-05
 </div>
 <br>
 </div>
