Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -200,6 +200,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Bell Orchestre</td>
+	<td><a href="https://www.discogs.com/Bell-Orchestre-House-Music/release/18046582">House Music</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Ben Harper and the Blind Boys of Alabama</td>
 	<td>There Will Be a Light</td>
 	<td>12 Inch</td>
@@ -760,7 +768,7 @@
 	<td>-</td>
 </tr>
 <tr align=center>
-	<td>The Jimmy Chamberlin Complex</td>
+	<td>Jimmy Chamberlin Complex</td>
 	<td>Honor</td>
 	<td>12 Inch</td>
 	<td>Amber with Black Marble</td>
@@ -2002,9 +2010,9 @@
 </table>
 <br>
 <div id="text">
-Total: 247
+Total: 248
 <br>
-Last Updated: 2021-03-14
+Last Updated: 2021-04-14
 </div>
 <br>
 </div>
