Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -1848,6 +1848,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Thurston Moore</td>
+    <td>By the Fire</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Tortoise</td>
 	<td>Millions Now Living Will Never Die</td>
 	<td>12 Inch</td>
@@ -2018,9 +2026,9 @@
 </table>
 <br>
 <div id="text">
-Total: 249
+Total: 250
 <br>
-Last Updated: 2021-05-09
+Last Updated: 2021-05-24
 </div>
 <br>
 </div>
