Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -209,7 +209,7 @@
 </tr>
 <tr align=center>
 	<td>Ben Harper and the Blind Boys of Alabama</td>
-	<td>There Will Be a Light</td>
+	<td><a href="https://www.discogs.com/Ben-Harper-The-Blind-Boys-Of-Alabama-There-Will-Be-A-Light/release/7638490">There Will Be a Light</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -656,6 +656,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Godspeed You! Black Emperor</td>
+	<td><a href="https://www.discogs.com/Godspeed-You-Black-Emperor-G_ds-Pee-At-States-End/release/18068767">G_d's Pee at State's End!</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP with 10 Inch</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>The Gun Club</td>
 	<td><a href="https://www.discogs.com/The-Gun-Club-Miami/release/16305822">Miami</a></td>
 	<td>12 Inch</td>
@@ -1013,6 +1021,22 @@
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Miles Davis</td>
+	<td><a href="https://www.discogs.com/Miles-Davis-Kind-Of-Blue/release/5142904">Kind of Blue</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Miles Davis</td>
+	<td><a href="https://www.discogs.com/Miles-Sketches-Of-Spain/release/7618170">Sketches of Spain</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
 	<td>-</td>
 </tr>
 <tr align=center>
@@ -2026,9 +2050,9 @@
 </table>
 <br>
 <div id="text">
-Total: 250
+Total: 253
 <br>
-Last Updated: 2021-05-24
+Last Updated: 2021-08-15
 </div>
 <br>
 </div>
