Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -1224,6 +1224,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Pharoah Sanders</td>
+	<td><a href="https://www.discogs.com/Pharoah-Sanders-Jewels-Of-Thought/release/11100557">Jewels of Thought</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Pixies</td>
 	<td><a href="https://www.discogs.com/Pixies-Surfer-Rosa/release/10705401">Surfer Rosa</a></td>
 	<td>12 Inch</td>
@@ -2050,9 +2058,9 @@
 </table>
 <br>
 <div id="text">
-Total: 253
+Total: 254
 <br>
-Last Updated: 2021-08-15
+Last Updated: 2021-08-22
 </div>
 <br>
 </div>
