Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -1024,6 +1024,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td><a href="https://www.discogs.com/Midori-Takada-Through-The-Looking-Glass/release/9975364">Midori Takada</a></td>
+	<td>Through the Looking Glass</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Miles Davis</td>
 	<td><a href="https://www.discogs.com/Miles-Davis-Kind-Of-Blue/release/5142904">Kind of Blue</a></td>
 	<td>12 Inch</td>
@@ -1034,6 +1042,14 @@
 <tr align=center>
 	<td>Miles Davis</td>
 	<td><a href="https://www.discogs.com/Miles-Sketches-Of-Spain/release/7618170">Sketches of Spain</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Miles Davis</td>
+	<td><a href="https://www.discogs.com/Miles-Davis-In-A-Silent-Way/release/7229732">In a Silent Way</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -1257,6 +1273,14 @@
 </tr>
 <tr align=center>
 	<td>Portico Quartet</td>
+	<td><a href="https://www.discogs.com/Portico-Quartet-Art-In-The-Age-Of-Automation/release/10765946">Art in the Age of Automation</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Portico Quartet</td>
 	<td><a href="https://www.discogs.com/Portico-Quartet-Untitled-Aitaoa-2/release/11957322">Untitled (AITAOA #2)</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
@@ -1266,6 +1290,14 @@
 <tr align=center>
 	<td>Portico Quartet</td>
 	<td><a href="https://www.discogs.com/Portico-Quartet-Memory-Streams/release/14227174">Memory Streams</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Portico Quartet</td>
+	<td><a href="https://www.discogs.com/Portico-Quartet-Terrain/release/18922852">Terrain</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -2058,9 +2090,9 @@
 </table>
 <br>
 <div id="text">
-Total: 254
+Total: 258
 <br>
-Last Updated: 2021-08-22
+Last Updated: 2021-09-25
 </div>
 <br>
 </div>
