Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -1024,8 +1024,8 @@
 	<td>-</td>
 </tr>
 <tr align=center>
-	<td><a href="https://www.discogs.com/Midori-Takada-Through-The-Looking-Glass/release/9975364">Midori Takada</a></td>
-	<td>Through the Looking Glass</td>
+	<td>Midori Takada</td>
+	<td><a href="https://www.discogs.com/Midori-Takada-Through-The-Looking-Glass/release/9975364">Through the Looking Glass</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
