Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -584,6 +584,14 @@
 	<td>Limited to 550</td>
 </tr>
 <tr align=center>
+	<td>Floating Points, Pharoah Sanders & The London Symphony Orchestra</td>
+	<td>Promises</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Ghost</td>
 	<td>Tune In, Turn On, Free Tibet</td>
 	<td>12 Inch</td>
@@ -948,6 +956,14 @@
 	<td>Love Your Abuser</td>
 	<td>12 Inch</td>
 	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Marius Ziska</td>
+	<td>Home/Heim</td>
+	<td>12 Inch</td>
+	<td>White</td>
 	<td>LP</td>
 	<td>-</td>
 </tr>
@@ -2090,9 +2106,9 @@
 </table>
 <br>
 <div id="text">
-Total: 258
+Total: 260
 <br>
-Last Updated: 2021-09-25
+Last Updated: 2021-10-31
 </div>
 <br>
 </div>
