Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -320,6 +320,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Christian Scott aTunde Adjuah</td>
+	<td><a href="https://www.discogs.com/release/16204577-Christian-Scott-aTunde-Adjuah-Axiom">Axiom</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>Limited to 1500</td>
+</tr>
+<tr align=center>
 	<td>Colin Stetson and Sarah Neufeld</td>
 	<td>Never Were the Way She Was</td>
 	<td>12 Inch</td>
@@ -2106,9 +2114,9 @@
 </table>
 <br>
 <div id="text">
-Total: 260
+Total: 261
 <br>
-Last Updated: 2021-10-31
+Last Updated: 2021-12-25
 </div>
 <br>
 </div>
