Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -1584,6 +1584,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Shakti</td>
+	<td>Shakti with John McLaughlin</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>The Shins</td>
 	<td>Chutes Too Narrow</td>
 	<td>12 Inch</td>
@@ -2114,9 +2122,9 @@
 </table>
 <br>
 <div id="text">
-Total: 261
+Total: 262
 <br>
-Last Updated: 2021-12-25
+Last Updated: 2022-02-19
 </div>
 <br>
 </div>
