Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -960,6 +960,22 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Leon Thomas</td>
+	<td>Spirits Known and Unknown</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Nucleus with Leon Thomas</td>
+	<td><a href="https://www.discogs.com/release/6418231-Nucleus-3-With-Leon-Thomas-Live-1970">Live 1970</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Lymbyc Systym</td>
 	<td>Love Your Abuser</td>
 	<td>12 Inch</td>
@@ -2122,9 +2138,9 @@
 </table>
 <br>
 <div id="text">
-Total: 262
+Total: 264
 <br>
-Last Updated: 2022-02-19
+Last Updated: 2022-03-20
 </div>
 <br>
 </div>
