Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -800,6 +800,30 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>John Coltrane</td>
+	<td>Africa/Brass</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>John Coltrane</td>
+	<td>Live at Birdland</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>John Coltrane/Archie Shepp</td>
+	<td>New Thing at Newport</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Jon Mueller</td>
 	<td>Strung</td>
 	<td>12 Inch</td>
@@ -1968,6 +1992,22 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Tisziji Muñoz</td>
+    <td>Visiting This Planet</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>The New Tony Williams Lifetime</td>
+    <td>Believe It</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Tortoise</td>
 	<td>Millions Now Living Will Never Die</td>
 	<td>12 Inch</td>
@@ -2138,9 +2178,9 @@
 </table>
 <br>
 <div id="text">
-Total: 264
+Total: 269
 <br>
-Last Updated: 2022-03-20
+Last Updated: 2022-05-14
 </div>
 <br>
 </div>
