Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -992,6 +992,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Leon Thomas</td>
+	<td>Facets - The Legend of Leon Thomas</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Lymbyc Systym</td>
 	<td>Love Your Abuser</td>
 	<td>12 Inch</td>
@@ -2178,9 +2186,9 @@
 </table>
 <br>
 <div id="text">
-Total: 269
+Total: 270
 <br>
-Last Updated: 2022-05-14
+Last Updated: 2022-05-16
 </div>
 <br>
 </div>
