--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1747,6 +1747,14 @@
 	<td>No</td>
 	<td>Fiona, Nathan, and Sara</td>
 </tr>
+<tr align=center>
+	<td>Kikagaku Moyo</td>
+	<td>-</td>
+	<td>2022-05-28</td>
+	<td>August Hall; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>Sara</td>
+</tr>
 </table>
 <br>
 </div>
