--- a/records/index.html
+++ b/records/index.html
@@ -464,6 +464,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Don Cherry</td>
+	<td>Don Cherry</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Earth</td>
 	<td>The Bees Made Honey in the Lion's Skull</td>
 	<td>12 Inch</td>
@@ -816,6 +824,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>John Coltrane</td>
+	<td><a href="https://www.discogs.com/release/19942006-John-Coltrane-A-Love-Supreme">A Love Supreme</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>John Coltrane/Archie Shepp</td>
 	<td>New Thing at Newport</td>
 	<td>12 Inch</td>
@@ -1005,6 +1021,14 @@
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Maleem Mahmoud Ghania with Pharoah Sanders</td>
+	<td><a href="https://www.discogs.com/release/13858058-Maleem-Mahmoud-Ghania-with-Pharoah-Sanders-The-Trance-Of-Seven-Colors">The Trance of Seven Colors</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
 	<td>-</td>
 </tr>
 <tr align=center>
@@ -1317,6 +1341,14 @@
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Pharoah Sanders</td>
+	<td><a href="https://www.discogs.com/release/22956734-Pharoah-Sanders-John-Hicks-Curtis-Lundy-Idris-Muhammad-Africa">Africa</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
 	<td>-</td>
 </tr>
 <tr align=center>
@@ -2186,9 +2218,9 @@
 </table>
 <br>
 <div id="text">
-Total: 270
+Total: 274
 <br>
-Last Updated: 2022-05-16
+Last Updated: 2022-05-30
 </div>
 <br>
 </div>
