Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -809,6 +809,14 @@
 </tr>
 <tr align=center>
 	<td>John Coltrane</td>
+	<td>Giant Steps</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>John Coltrane</td>
 	<td>Africa/Brass</td>
 	<td>12 Inch</td>
 	<td>Black</td>
@@ -826,6 +834,14 @@
 <tr align=center>
 	<td>John Coltrane</td>
 	<td><a href="https://www.discogs.com/release/19942006-John-Coltrane-A-Love-Supreme">A Love Supreme</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>John Coltrane</td>
+	<td>Ascension</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -1338,6 +1354,14 @@
 <tr align=center>
 	<td>Pharoah Sanders</td>
 	<td><a href="https://www.discogs.com/Pharoah-Sanders-Jewels-Of-Thought/release/11100557">Jewels of Thought</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Pharoah Sanders</td>
+	<td>Live...</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -2016,6 +2040,14 @@
 	<td>Second pressing</td>
 </tr>
 <tr align=center>
+	<td>Sun Ra</td>
+    <td>Lanquidity</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Talk Talk</td>
     <td>Spirit of Eden</td>
 	<td>12 Inch</td>
@@ -2218,9 +2250,9 @@
 </table>
 <br>
 <div id="text">
-Total: 274
+Total: 278
 <br>
-Last Updated: 2022-05-30
+Last Updated: 2022-06-11
 </div>
 <br>
 </div>
