--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1755,6 +1755,14 @@
 	<td>No</td>
 	<td>Sara</td>
 </tr>
+<tr align=center>
+	<td>Chief Adjuah (formerly Christian Scott) (early show)</td>
+	<td>-</td>
+	<td>2022-06-24</td>
+	<td>Yoshi's; Oakland, CA, US</td>
+	<td>No</td>
+	<td>Fiona and Nathan</td>
+</tr>
 </table>
 <br>
 </div>
