Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -1376,6 +1376,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Pharoah Sanders</td>
+	<td>Oh Lord, Let Me Do No Wrong</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Pixies</td>
 	<td><a href="https://www.discogs.com/Pixies-Surfer-Rosa/release/10705401">Surfer Rosa</a></td>
 	<td>12 Inch</td>
@@ -2250,9 +2258,9 @@
 </table>
 <br>
 <div id="text">
-Total: 278
+Total: 279
 <br>
-Last Updated: 2022-06-11
+Last Updated: 2022-07-30
 </div>
 <br>
 </div>
